# rustpaste

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20230721101821_paste.sql
src/: lib.rs  main.rs  storage.rs
